docs/3.3.x/pseudo-props.mdx
---
id: pseudo-props
title: "Pseudo props: Overview"
metaTitle: "Pseudo props: Overview | NativeBase"
metaDescription: NativeBase pseudo props can be used to customize the style or behaviour of Nativebase components across platforms.
---

import {
  Box,
  NativeBaseProvider,
  HStack,
  VStack,
  Text,
  Pressable,
  Image,
} from "native-base";

NativeBase provides a declarative way to add interaction or platform specific props.

## Hover

Using `_hover` pseudo prop, we can customize the style of Pressable component on hover.

<NativeBaseProvider>
  <Box flex={1} mb="16">
    <Pressable
      _hover={{ bg: "primary.700" }}
      bg="primary.600"
      py="2"
      px="3"
      rounded="sm"
      alignSelf="center"
    >
      <Text textTransform="uppercase" fontWeight="bold" color="white">
        Hover
      </Text>
    </Pressable>
  </Box>
</NativeBaseProvider>

```jsx title="Hover example"
<Pressable
  _hover={{ bg: "primary.700" }}
  bg="primary.600"
  py="2"
  px="3"
  rounded="sm"
  alignSelf="center"
>
  <Text textTransform="uppercase" fontWeight="bold" color="white">
    Hover me
  </Text>
</Pressable>
```

## Pressed

Using `_pressed` pseudo prop, we can customize the style of Pressable component on pressed.

<NativeBaseProvider>
  <Box flex={1} mb="16">
    <Pressable
      _pressed={{ bg: "primary.800" }}
      bg="primary.600"
      py="2"
      px="3"
      alignSelf="center"
      rounded="sm"
    >
      <Text textTransform="uppercase" fontWeight="bold" color="white">
        Pressed
      </Text>
    </Pressable>
  </Box>
</NativeBaseProvider>

```jsx title="Pressed example"
<Pressable
  _pressed={{ bg: "primary.800" }}
  bg="primary.600"
  py="2"
  rounded="sm"
  px="3"
  alignSelf="center"
>
  <Text textTransform="uppercase" fontWeight="bold" color="white">
    Pressed
  </Text>
</Pressable>
```

## Focus

Using `_focus` pseudo prop, we can customize the style of Pressable component on focus.

<NativeBaseProvider>
  <Box flex={1} mb="16">
    <Pressable
      _focus={{
        bg: "primary.700",
        borderColor: "primary.400",
        borderWidth: "2px",
      }}
      bg="primary.600"
      rounded="sm"
      py="2"
      px="3"
      alignSelf="center"
    >
      <Text textTransform="uppercase" fontWeight="bold" color="white">
        Focus
      </Text>
    </Pressable>
  </Box>
</NativeBaseProvider>

```jsx title="Focus example"
<Pressable
  _focus={{ bg: "primary.700", borderColor: "primary.400", borderWidth: "2px" }}
  bg="primary.600"
  rounded="sm"
  py="2"
  px="3"
  alignSelf="center"
>
  <Text textTransform="uppercase" fontWeight="bold" color="white">
    Focus
  </Text>
</Pressable>
```

## Platform specific styling

Using `_web`, `_iOS`, `_android` pseudo props, we can customize the style or behaviour of NativeBase components across platforms.

<NativeBaseProvider>
  <HStack space="4" justifyContent="center" alignItems="center" mb="8">
    <VStack alignItems="center" space="2">
      <Box
        _web={{ bg: "cyan.600" }}
        bg="cyan.600"
        rounded="sm"
        py="2"
        px="3"
        alignSelf="center"
      >
        <Text textTransform="uppercase" fontWeight="bold" color="white">
          Save
        </Text>
      </Box>
      <Text color="white">Web</Text>
    </VStack>
    <VStack alignItems="center" space="2">
      <Box
        _android={{ bg: "yellow.400" }}
        bg="yellow.400"
        rounded="sm"
        py="2"
        px="3"
        alignSelf="center"
      >
        <Text textTransform="uppercase" fontWeight="bold">
          Save
        </Text>
      </Box>
      <Text color="white">Android</Text>
    </VStack>
    <VStack alignItems="center" space="2">
      <Box
        _ios={{ bg: "violet.500" }}
        bg="violet.500"
        rounded="sm"
        py="2"
        px="3"
        alignSelf="center"
      >
        <Text textTransform="uppercase" fontWeight="bold" color="white">
          Save
        </Text>
      </Box>
      <Text color="white">iOS</Text>
    </VStack>
  </HStack>
</NativeBaseProvider>

```jsx title="Platform specific example"
<HStack space={4} justifyContent="center" alignItems="center">
  <VStack alignItems="center" space="2">
    <Box
      _web={{ bg: "cyan.600" }}
      rounded="sm"
      py="2"
      px="3"
      alignSelf="center"
    >
      <Text textTransform="uppercase" fontWeight="bold" color="white">
        Save
      </Text>
    </Box>
    <Text color="white">Web</Text>
  </VStack>
  <VStack alignItems="center" space="2">
    <Box
      _android={{ bg: "yellow.400" }}
      rounded="sm"
      py="2"
      px="3"
      alignSelf="center"
    >
      <Text textTransform="uppercase" fontWeight="bold">
        Save
      </Text>
    </Box>
    <Text color="white">Android</Text>
  </VStack>
  <VStack alignItems="center" space="2">
    <Box
      _ios={{ bg: "violet.500" }}
      rounded="sm"
      py="2"
      px="3"
      alignSelf="center"
    >
      <Text textTransform="uppercase" fontWeight="bold" color="white">
        Save
      </Text>
    </Box>
    <Text color="white">iOS</Text>
  </VStack>
</HStack>
```
